--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="end">
-        <p>Tel: 1800-00-000 Email: support@foodyard.com | Copyright © 2023 FoodYard | All Rights Reserved. <br>Website developed by: Kurmala Chenchu Baba Manikanta | Mohd. Rahil | Lokesh Srireddy</p>
+        <p>Tel: 1800-000 Email: support@dwarka.in <br>Website developed by: Dwarkadhish Kamthane | Paritosh pradhan | Palak Vohra</p>
     </div>
 </section>
 
